<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>obeast-product</artifactId>
        <groupId>com.obeast</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>obeast-product-biz</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>

        <!--api 依赖-->
        <dependency>
            <groupId>com.obeast</groupId>
            <artifactId>obeast-product-api</artifactId>
        </dependency>

        <!--feign 注解依赖-->
        <dependency>
            <groupId>com.obeast</groupId>
            <artifactId>obeast-common-feign</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.obeast</groupId>
            <artifactId>obeast-common-security</artifactId>
        </dependency>
        <!--日志处理-->
        <dependency>
            <groupId>com.obeast</groupId>
            <artifactId>obeast-common-log</artifactId>
        </dependency>
        <!--接口文档-->
        <dependency>
            <groupId>com.obeast</groupId>
            <artifactId>obeast-common-swagger</artifactId>
        </dependency>

        <!--xss 过滤-->
        <dependency>
            <groupId>com.obeast</groupId>
            <artifactId>obeast-common-xss</artifactId>
        </dependency>

        <!-- orm 模块-->
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
        </dependency>
        <!--注册中心客户端-->
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
        </dependency>
        <!--配置中心客户端-->
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
        </dependency>

        <!--undertow容器-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-undertow</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>